tests/models/struct/unnamed/f64/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    f64
);
fn main() {}
